<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="24dp">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/todo"
        android:src="@drawable/bottle_of_water_bro_1" />

    <TextView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/track_your_daily"
        android:textSize="24sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:gravity="center"/>
    <TextView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/achieve_your_hydration"
        android:textSize="15sp"
        android:textColor="@color/textColo"
        android:textStyle="bold"
        android:gravity="center"/>
</LinearLayout>
