<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue10"
    android:layout_marginTop="15dp"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:text="@string/good_morning"
        android:textColor="@color/textColo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/notification_logo"
        android:layout_width="42dp"
        android:layout_height="42dp"
        android:layout_marginEnd="9dp"
        android:layout_marginTop="15dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/baseline_circle_notifications_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/notification_red"
        android:layout_width="12dp"
        android:layout_height="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginTop="17dp"
        android:contentDescription="@string/todo"
        android:elevation="4dp"
        android:src="@drawable/baseline_circle_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



    <TextView
        android:id="@+id/tv_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <com.github.mikephil.charting.charts.BarChart
        android:id="@+id/chart_water_consumption"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_username" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/chart_water_consumption"
        tools:layout_editor_absoluteX="16dp">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <androidx.cardview.widget.CardView
                android:id="@+id/target"
                android:layout_width="130dp"
                android:layout_height="80dp"
                android:layout_marginTop="12dp"
                app:cardCornerRadius="18dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:textSize="18dp"
                        android:text="@string/target"
                        android:textColor="@color/textColo" />

                    <TextView
                        android:id="@+id/targetText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="12dp"
                        android:layout_gravity="center"
                        android:text="enter target"
                        android:textStyle="bold"
                        android:textColor="@color/textColo"
                        android:textSize="18sp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <TextView
                android:id="@+id/tvter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/drinking_time"
                android:layout_margin="4dp"
                android:textSize="25sp"
                android:textStyle="bold"/>

            <androidx.recyclerview.widget.RecyclerView
                android:layout_margin="3dp"
                android:id="@+id/recyclerViewDaily"
                android:layout_width="match_parent"
                android:layout_height="200dp"/>


        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:orientation="vertical"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tv_water"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dayli_target"
                android:layout_margin="12dp"
                android:textSize="25sp"
                android:textStyle="bold"/>

            <com.app.hydratracker.WaveProgressView
                app:layout_constraintHorizontal_bias="0.5"
                android:id="@+id/waveView"
                android:layout_width="150dp"
                android:layout_height="150dp"/>
        </LinearLayout>

    </LinearLayout>







    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@android:drawable/ic_input_add"
        app:backgroundTint="@color/blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="16dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>
